--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon api.js",
     "start" : "node api.js"
   },
+  "heroku-postbuild": "npm run build",
   "author": "",
   "license": "ISC",
   "description": "",
