--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start" : "node api.js"
   },
   "heroku-postbuild": "npm run build",
+  "engines": {
+    "npm" : "8.11.0",
+    "node" : "16.15.1"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
