--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "nodemon api.js",
     "start" : "node api.js"
   },
+  "engines": {
+    "node" : "16.x",
+    "npm" : "8.11.0"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
